--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <button id="down">Abajo</button>
         </div>
         <div class="messages">
-            <!-- TODO-->
-            <p> Párrafo de ejemplo</p>
+            <p>Vidas: <span id="lives"> </span></p>
         </div>
     </div>
     <script src="./maps.js"></script>
